--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# Project folders
+# Игнорировать все папки temp в любом месте проекта
+temp/
+**/temp/
